# CMake-development-environment

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  library.cpp  main.cpp
